--- a/app/src/main/res/layout/activity_edit_message.xml
+++ b/app/src/main/res/layout/activity_edit_message.xml
@@ -66,15 +66,16 @@
 
   <TextView
       android:id="@+id/textView2"
-      android:layout_width="175dp"
+      android:layout_width="129dp"
       android:layout_height="37dp"
       android:text="Voice Message:"
       android:textSize="16sp"
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
-      app:layout_constraintHorizontal_bias="0.059"
+      app:layout_constraintHorizontal_bias="0.046"
       app:layout_constraintStart_toStartOf="parent"
-      app:layout_constraintTop_toTopOf="parent" />
+      app:layout_constraintTop_toTopOf="parent"
+      app:layout_constraintVertical_bias="0.499" />
 
   <TextView
       android:id="@+id/textView5"
@@ -90,7 +91,7 @@
       app:layout_constraintVertical_bias="0.164" />
 
   <TextView
-      android:id="@+id/textView4"
+      android:id="@+id/name1"
       android:layout_width="127dp"
       android:layout_height="25dp"
       android:textSize="16sp"
@@ -102,7 +103,7 @@
       app:layout_constraintVertical_bias="0.164" />
 
   <EditText
-      android:id="@+id/textMessage"
+      android:id="@+id/textMessage1"
       android:layout_width="363dp"
       android:layout_height="160dp"
       android:autofillHints="Enter your text message"
@@ -119,7 +120,7 @@
       app:layout_constraintVertical_bias="0.278" />
 
   <Button
-      android:id="@+id/AddGuestbtn"
+      android:id="@+id/EditBtn"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:text="Edit"
@@ -131,7 +132,7 @@
       app:layout_constraintVertical_bias="0.705" />
 
   <ImageButton
-      android:id="@+id/imageButton"
+      android:id="@+id/soundRecord1"
       android:layout_width="52dp"
       android:layout_height="54dp"
       app:layout_constraintBottom_toBottomOf="parent"
@@ -141,5 +142,41 @@
       app:layout_constraintTop_toTopOf="parent"
       app:layout_constraintVertical_bias="0.587"
       app:srcCompat="@android:drawable/ic_btn_speak_now" />
+
+  <Button
+      android:id="@+id/Playbtn"
+      android:layout_width="162dp"
+      android:layout_height="52dp"
+      android:text="Previous Play"
+      app:layout_constraintBottom_toTopOf="@+id/soundRecord1"
+      app:layout_constraintEnd_toEndOf="parent"
+      app:layout_constraintHorizontal_bias="0.742"
+      app:layout_constraintStart_toStartOf="parent"
+      app:layout_constraintTop_toBottomOf="@+id/textMessage1"
+      app:layout_constraintVertical_bias="0.74" />
+
+  <TextView
+      android:id="@+id/audioStatus1"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:layout_marginTop="12dp"
+      android:text="Audio Status"
+      app:layout_constraintBottom_toTopOf="@+id/Playbtn2"
+      app:layout_constraintEnd_toEndOf="parent"
+      app:layout_constraintHorizontal_bias="0.326"
+      app:layout_constraintStart_toEndOf="@+id/soundRecord1"
+      app:layout_constraintTop_toBottomOf="@+id/Playbtn" />
+
+  <Button
+      android:id="@+id/Playbtn2"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:text="Play"
+      app:layout_constraintBottom_toTopOf="@+id/EditBtn"
+      app:layout_constraintEnd_toEndOf="parent"
+      app:layout_constraintHorizontal_bias="0.351"
+      app:layout_constraintStart_toEndOf="@+id/soundRecord1"
+      app:layout_constraintTop_toBottomOf="@+id/Playbtn"
+      app:layout_constraintVertical_bias="1.0" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
