--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -29,7 +29,7 @@
         android:layout_margin="30dp"
         app:cardCornerRadius="30dp"
         app:cardElevation="20dp"
-        android:id="@+id/create_event_card">
+        android:id="@+id/send_message_btn">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -108,7 +108,7 @@
         android:layout_margin="30dp"
         app:cardCornerRadius="30dp"
         app:cardElevation="20dp"
-        android:id="@+id/view_invitation_card">
+        android:id="@+id/View_Edit_Message_btn">
 
         <LinearLayout
             android:layout_width="match_parent"
