--- a/app/src/main/res/layout/activity_send_message.xml
+++ b/app/src/main/res/layout/activity_send_message.xml
@@ -38,6 +38,20 @@
         app:layout_constraintVertical_bias="0.103" />
 
     <TextView
+        android:id="@+id/audioStatus"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:text="Record Status"
+        android:textSize="14sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.493"
+        app:layout_constraintStart_toEndOf="@+id/soundRecord1"
+        app:layout_constraintTop_toBottomOf="@+id/textMessage1"
+        app:layout_constraintVertical_bias="0.025" />
+
+    <TextView
         android:id="@+id/textView"
         android:layout_width="127dp"
         android:layout_height="25dp"
@@ -71,10 +85,10 @@
         android:textSize="16sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.073"
+        app:layout_constraintHorizontal_bias="0.059"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.521" />
+        app:layout_constraintVertical_bias="0.546" />
 
     <TextView
         android:id="@+id/textView10"
@@ -117,7 +131,7 @@
         app:layout_constraintVertical_bias="0.164" />
 
     <TextView
-        android:id="@+id/textView4"
+        android:id="@+id/name1"
         android:layout_width="127dp"
         android:layout_height="25dp"
         android:textSize="16sp"
@@ -129,7 +143,7 @@
         app:layout_constraintVertical_bias="0.164" />
 
     <TextView
-        android:id="@+id/textView9"
+        android:id="@+id/phoneNum"
         android:layout_width="127dp"
         android:layout_height="25dp"
         android:textSize="16sp"
@@ -141,7 +155,7 @@
         app:layout_constraintVertical_bias="0.797" />
 
     <EditText
-        android:id="@+id/textMessage"
+        android:id="@+id/textMessage1"
         android:layout_width="363dp"
         android:layout_height="160dp"
         android:autofillHints="Enter your text message"
@@ -158,7 +172,7 @@
         app:layout_constraintVertical_bias="0.336" />
 
     <Button
-        android:id="@+id/AddGuestbtn"
+        android:id="@+id/EditBtn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Send"
@@ -167,22 +181,35 @@
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.651" />
+        app:layout_constraintVertical_bias="0.653" />
+
+    <Button
+        android:id="@+id/PlayBtn"
+        android:layout_width="83dp"
+        android:layout_height="47dp"
+        android:layout_marginTop="11dp"
+        android:text="Play"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.464"
+        app:layout_constraintStart_toEndOf="@+id/soundRecord1"
+        app:layout_constraintTop_toBottomOf="@+id/audioStatus"
+        app:layout_constraintVertical_bias="0.0" />
 
     <ImageButton
-        android:id="@+id/imageButton"
+        android:id="@+id/soundRecord1"
         android:layout_width="52dp"
         android:layout_height="54dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.562"
+        app:layout_constraintHorizontal_bias="0.534"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.519"
+        app:layout_constraintVertical_bias="0.545"
         app:srcCompat="@android:drawable/ic_btn_speak_now" />
 
     <ImageButton
-        android:id="@+id/imageButton2"
+        android:id="@+id/callBtn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:layout_constraintBottom_toBottomOf="parent"
