--- a/app/src/main/res/layout/item_feedback.xml
+++ b/app/src/main/res/layout/item_feedback.xml
@@ -1,4 +1,3 @@
-<?xml version="1.0" encoding="utf-8"?>
 <!-- item_feedback.xml -->
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
@@ -16,21 +15,54 @@
         android:layout_margin="10dp"
         android:orientation="vertical">
 
-        <!-- Example: TextViews for feedback information -->
-        <TextView
-            android:id="@+id/tvFeedbackTitle"
+        <!-- Horizontal LinearLayout for username and buttons -->
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Feedback Title"
-            android:textSize="18dp" />
+            android:orientation="horizontal">
 
+            <!-- TextView for feedback username -->
+            <TextView
+                android:id="@+id/tvFeedbackUsername"
+                android:layout_width="0dp"
+                android:layout_weight="1"
+                android:layout_height="wrap_content"
+                android:text="Feedback Title"
+                android:textSize="18dp" />
+
+            <!-- Edit button -->
+            <ImageButton
+                android:id="@+id/btnEditFeedback"
+                android:layout_width="15dp"
+                android:layout_height="15dp"
+                android:layout_marginLeft="12dp"
+                android:layout_marginTop="4dp"
+                android:scaleType="fitCenter"
+                android:background="@android:color/transparent"
+                android:visibility="gone"
+                app:srcCompat="@drawable/baseline_edit_24" />
+
+            <!-- Delete button -->
+            <ImageButton
+                android:id="@+id/btnDeleteFeedback"
+                android:layout_width="15dp"
+                android:layout_height="15dp"
+                android:layout_marginLeft="12dp"
+                android:layout_marginTop="4dp"
+                android:scaleType="fitCenter"
+                android:background="@android:color/transparent"
+                android:visibility="gone"
+                app:srcCompat="@drawable/purpledelete" />
+
+        </LinearLayout>
+
+        <!-- TextView for feedback message -->
         <TextView
-            android:id="@+id/tvFeedbackDescription"
+            android:id="@+id/tvFeedbackMessage"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Feedback Description" />
 
         <!-- Add more TextViews or UI elements for other feedback details -->
-
     </LinearLayout>
 </androidx.cardview.widget.CardView>
