--- a/app/src/main/res/layout/activity_feedback_list.xml
+++ b/app/src/main/res/layout/activity_feedback_list.xml
@@ -32,6 +32,14 @@
         app:cardElevation="20dp"
         tools:layout_editor_absoluteX="0dp"
         tools:layout_editor_absoluteY="118dp">
+        <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+            xmlns:app="http://schemas.android.com/apk/res-auto"
+            xmlns:tools="http://schemas.android.com/tools"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:fillViewport="true"
+            android:orientation="vertical"
+            tools:context=".FeedbackList">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -118,7 +126,7 @@
                 tools:listitem="@layout/item_feedback" />
 
         </LinearLayout>
-
+ </ScrollView>
     </androidx.cardview.widget.CardView>
 
 
