--- a/app/src/main/res/layout/activity_event_invitation_details.xml
+++ b/app/src/main/res/layout/activity_event_invitation_details.xml
@@ -6,6 +6,15 @@
     android:layout_height="match_parent"
     tools:context=".EventInvitationDetails">
 
+    <LinearLayout
+        android:layout_width="417dp"
+        android:layout_height="663dp"
+        android:orientation="vertical"
+        app:layout_constraintBottom_toBottomOf="@+id/cardView4"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/toolbar"></LinearLayout>
+
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
@@ -23,21 +32,22 @@
 
     <androidx.cardview.widget.CardView
         android:id="@+id/cardView4"
-        android:layout_width="408dp"
-        android:layout_height="664dp"
+        android:layout_width="382dp"
+        android:layout_height="630dp"
+        android:layout_marginTop="12dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/toolbar">
 
         <androidx.constraintlayout.widget.ConstraintLayout
-            android:layout_width="412dp"
-            android:layout_height="match_parent">
+            android:layout_width="382dp"
+            android:layout_height="633dp">
 
             <TextView
                 android:id="@+id/eventname"
-                android:layout_width="196dp"
-                android:layout_height="53dp"
+                android:layout_width="188dp"
+                android:layout_height="60dp"
                 android:textSize="20sp"
                 android:textStyle="bold"
                 app:layout_constraintBottom_toBottomOf="parent"
@@ -49,26 +59,26 @@
 
             <TextView
                 android:id="@+id/organizer"
-                android:layout_width="198dp"
-                android:layout_height="43dp"
+                android:layout_width="145dp"
+                android:layout_height="36dp"
                 android:layout_marginBottom="404dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.074"
+                app:layout_constraintHorizontal_bias="0.059"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/eventname"
                 app:layout_constraintVertical_bias="0.184" />
 
             <TextView
                 android:id="@+id/eventDescription1"
-                android:layout_width="266dp"
-                android:layout_height="88dp"
+                android:layout_width="189dp"
+                android:layout_height="76dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.085"
+                app:layout_constraintHorizontal_bias="0.071"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/organizer"
-                app:layout_constraintVertical_bias="0.059" />
+                app:layout_constraintVertical_bias="0.032" />
 
             <androidx.cardview.widget.CardView
                 android:id="@+id/cardView2"
@@ -97,7 +107,7 @@
                         app:layout_constraintHorizontal_bias="0.039"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toTopOf="parent"
-                        app:layout_constraintVertical_bias="0.098" />
+                        app:layout_constraintVertical_bias="0.11" />
 
                     <TextView
                         android:id="@+id/location"
@@ -188,25 +198,23 @@
 
             <TextView
                 android:id="@+id/eventEnd"
-                android:layout_width="146dp"
-                android:layout_height="39dp"
-                android:layout_marginTop="4dp"
-                android:layout_marginBottom="12dp"
-                app:layout_constraintBottom_toTopOf="@+id/eventDescription1"
+                android:layout_width="125dp"
+                android:layout_height="49dp"
+                app:layout_constraintBottom_toTopOf="@+id/textView13"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.48"
+                app:layout_constraintHorizontal_bias="0.775"
                 app:layout_constraintStart_toEndOf="@+id/organizer"
-                app:layout_constraintTop_toBottomOf="@+id/textView32"
-                app:layout_constraintVertical_bias="0.44" />
+                app:layout_constraintTop_toBottomOf="@+id/eventStart"
+                app:layout_constraintVertical_bias="0.81" />
 
             <TextView
                 android:id="@+id/eventStart"
-                android:layout_width="150dp"
-                android:layout_height="61dp"
-                android:layout_marginStart="13dp"
-                android:layout_marginTop="4dp"
+                android:layout_width="124dp"
+                android:layout_height="51dp"
+                android:layout_marginTop="8dp"
+                android:layout_marginEnd="22dp"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.0"
+                app:layout_constraintHorizontal_bias="1.0"
                 app:layout_constraintStart_toEndOf="@+id/eventname"
                 app:layout_constraintTop_toBottomOf="@+id/textView31" />
 
@@ -214,46 +222,51 @@
                 android:id="@+id/textView31"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="4dp"
-                android:text="Event Date:"
+                android:layout_marginTop="16dp"
+                android:text="Start:"
+                android:textStyle="bold"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.223"
+                app:layout_constraintHorizontal_bias="0.225"
                 app:layout_constraintStart_toEndOf="@+id/eventname"
                 app:layout_constraintTop_toTopOf="parent" />
 
             <TextView
-                android:id="@+id/textView32"
-                android:layout_width="29dp"
-                android:layout_height="24dp"
-                android:layout_marginTop="8dp"
-                android:text="to"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.482"
-                app:layout_constraintStart_toEndOf="@+id/organizer"
-                app:layout_constraintTop_toBottomOf="@+id/eventStart" />
-
-            <TextView
-                android:id="@+id/textView34"
+                android:id="@+id/textView14"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="13dp"
-                android:layout_marginTop="60dp"
+                android:layout_marginTop="100dp"
+                android:text="End:"
+                android:textStyle="bold"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.217"
+                app:layout_constraintStart_toEndOf="@+id/eventname"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <TextView
+                android:id="@+id/textView13"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="176dp"
                 android:text="Event Type:"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.029"
-                app:layout_constraintStart_toEndOf="@+id/eventDescription1"
-                app:layout_constraintTop_toTopOf="@+id/eventEnd" />
+                app:layout_constraintHorizontal_bias="0.305"
+                app:layout_constraintStart_toEndOf="@+id/eventname"
+                app:layout_constraintTop_toTopOf="parent" />
 
             <TextView
                 android:id="@+id/eventType"
-                android:layout_width="97dp"
-                android:layout_height="22dp"
+                android:layout_width="110dp"
+                android:layout_height="39dp"
+                android:layout_marginStart="8dp"
+                android:layout_marginTop="12dp"
+                android:layout_marginEnd="36dp"
+                android:layout_marginBottom="44dp"
                 app:layout_constraintBottom_toTopOf="@+id/cardView2"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.216"
+                app:layout_constraintHorizontal_bias="1.0"
                 app:layout_constraintStart_toEndOf="@+id/eventDescription1"
-                app:layout_constraintTop_toBottomOf="@+id/textView34"
-                app:layout_constraintVertical_bias="0.221" />
+                app:layout_constraintTop_toBottomOf="@+id/textView13"
+                app:layout_constraintVertical_bias="0.037" />
 
             <TextView
                 android:id="@+id/textView9"
@@ -264,10 +277,10 @@
                 android:textStyle="bold"
                 app:layout_constraintBottom_toTopOf="@+id/eventname"
                 app:layout_constraintEnd_toStartOf="@+id/textView31"
-                app:layout_constraintHorizontal_bias="0.555"
+                app:layout_constraintHorizontal_bias="0.47"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintVertical_bias="0.137" />
+                app:layout_constraintVertical_bias="0.444" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.cardview.widget.CardView>
